[package]
name = "vintage_story_mod_api"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust library for interacting with Vintage Story Web Mod API"
repository = "https://github.com/taxolotl/vintage_story_mod_api"
keywords = ["vintagestory", "api", "modding", "client"]

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

# Optional random support
rand = { version = "0.9.1", optional = true }

[dev-dependencies]
# Allow tests to always use rand without requiring feature
rand = "0.9.1"

[features]
default = []
random = ["rand"]
